IE fix for off-by-one errors which occur when % is used for widths in a set of multiple items. This allows each item to begin -1px to the left, leaving 1px of extra space per item, which in this case is not visible.

--- a/resources/uploadWizard.css
+++ b/resources/uploadWizard.css
@@ -27,6 +27,7 @@ form.mwe-upwiz-form {
 
 #mwe-upwiz-steps li {
 	color: #666666;
+	margin-right: -1px;
 }
 
 #mwe-upwiz-steps li.head {
